emptydir-vol.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mydep
spec:
  replicas: 3
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
      - image: nginx
        name: con1
        ports:
        - containerPort: 80
        volumeMounts:
        - name: myvol
          mountPath: /data
      - image: tomcat
        name: con2
        ports:
        - containerPort: 80
        volumeMounts:
        - name: myvol
          mountPath: /data
      volumes:
      - name: myvol
        emptyDir: {}
