init-con.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: init-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
      - image: nginx
        name: con1
        volumeMounts:
        - name: myvol
          mountPath: /usr/share/nginx/html
      volumes:
      - name: myvol
        emptyDir: {}
