node-aff-req.yaml
apiVersion: v1
kind: Pod
metadata:
   name: mypod-aff
   labels:
     app: myapp
spec:
   containers:
   - name: con1
     image: nginx:latest
     ports:
     - containerPort: 80
   affinity:
    nodeAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
        nodeSelectorTerms:
        - matchExpressions:
          - key: cpu
            operator: NotIn # anti affinity notin
            values:
            - ryzen
