node-sel.yaml
apiVersion: v1
kind: Pod
metadata:
   name: pod-node-sel
spec:
   containers:
   - name: con1
     image: httpd:latest
     ports:
     - containerPort: 80
   nodeSelector:
     cpu: ryzen
