nodename-pod.yaml
apiVersion: v1
kind: Pod
metadata:
   name: pod-node
spec:
   containers:
   - name: con1
     image: nginx:latest
     ports:
     - containerPort: 80
   nodeName: node1
