pod-aff-req.yaml
apiVersion: v1
kind: Pod
metadata:
   name: pod-aff-req
   labels:
     app: dataapp
spec:
   containers:
   - name: con1
     image: nginx:latest
     ports:
     - containerPort: 80
   affinity:
     podAntiAffinity:  # to anit affinity user podAntiAffinity
      requiredDuringSchedulingIgnoredDuringExecution:
      - labelSelector:
          matchExpressions:
          - key: app
            operator: In
            values:
            - myapp
        topologyKey: kubernetes.io/hostname
