pod.yaml
apiVersion: v1
kind: Pod
metadata:
   name: mypod
   labels:
     app: myapp
     env: dev
spec:
   containers:
   - name: con1
     image: nginx:latest
     ports:
     - containerPort: 80
     resources:
       limits:
         cpu: "500m"
         memory: "128Mi"
       requests:
         cpu: "100m" 
         memory: "64Mi"
   - name: con2
     image: tomcat:latest
     ports:
     - containerPort: 8080
