pvc-pod.yaml
apiVersion: v1
kind: Pod
metadata:
   name: mypod-pvc
   labels:
     app: myapp
     env: dev
spec:
   containers:
   - name: con1
     image: nginx:latest
     ports:
     - containerPort: 80
     volumeMounts:
     - name: myvol
       mountPath: /data
     - name: myvol2
       mountPath: /emdir
   volumes:
   - name: myvol
     persistentVolumeClaim:
        claimName: pvclaim
   - name: myvol2
     emptyDir: {}
