sa-pod.yaml
apiVersion: v1
kind: Pod
metadata:
   name: mypod
   namespace: devops
   labels:
     app: myapp
     env: dev
spec:
   serviceAccount: robo
   containers:
   - name: con1
     image: nginx:latest
     ports:
     - containerPort: 80
