taint-tol-master.yaml
apiVersion: v1
kind: Pod
metadata:
   name: mater-pod
   labels:
     app: myapp
spec:
   containers:
   - name: con1
     image: nginx:latest
     ports:
     - containerPort: 80
   tolerations:
   - key: node-role.kubernetes.io/control-plane
     effect: NoSchedule
