taint-tol.yaml
apiVersion: v1
kind: Pod
metadata:
   name: mypod
   labels:
     app: myapp
spec:
   containers:
   - name: con1
     image: nginx:latest
     ports:
     - containerPort: 80
   tolerations:
   - key: color
     operator: Equal
     value: red
     effect: NoExecute
