test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: mango
  name: mango
spec:
  replicas: 3
  selector:
    matchLabels:
      app: mango
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: mango
    spec:
      containers:
      - image: nginx
        name: nginx
        ports:
        - containerPort: 80
        resources: {}
status: {}
