deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mydep
spec:
   replicas: 3
   selector:
     matchLabels:
       app: myapp
   template:
      metadata:
        labels:
          app: myapp
      spec:
        containers:
        - name: con1
          image: 966145/myserver121:latest
          ports:
          - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: mydep-svc
spec:
  type: NodePort
  selector:
    app: myapp
  ports:
  - port: 80
    nodePort: 30123
