mysql.yaml
apiVersion: v1
kind: Pod
metadata:
   name: mydb
   labels:
     app: mysql
spec:
   containers:
   - name: con1
     image: mysql:5.7
     ports:
     - containerPort: 3306
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-svc
spec:
  selector:
    app: mysql
  ports:
  - port: 3306
