wordpress-2.yaml
apiVersion: v1
kind: Pod
metadata:
   name: wordpress-2
   labels:
     app: wordpress-2
spec:
   containers:
   - name: con1
     image: wordpress:latest
     ports:
     - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: wordpress-2-svc
spec:
  type: NodePort
  selector:
    app: wordpress-2
  ports:
  - port: 80
    nodePort: 30124
