ingress-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mydep
spec:
   replicas: 3
   selector:
     matchLabels:
       app: myapp
   template:
      metadata:
        labels:
          app: myapp
      spec:
        containers:
        - name: con1
          image: 966145/myserver121:latest
          ports:
          - containerPort: 80
  
---
apiVersion: v1
kind: Service
metadata:
  name: mydep-svc
spec:
  type: ClusterIP
  selector:
    app: myapp
  ports:
  - port: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: aneesh.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mydep-svc
            port:
              number: 80
