net-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress-policy
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: wordpress
  policyTypes:
  - Egress
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: mysql
    ports:
     - protocol: TCP
       port: 3306
