net-mysql-ing-eg.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mysql-ing-egress
spec:
  podSelector:
    matchLabels:
      app: mysql
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
      - podSelector:
          matchLabels:
            app: wordpress
      ports:
        - protocol: TCP
          port: 3306
            #  egress:
            #    - to:
            #      - podSelector:
            #          matchLabels:
            #            app: wordpress
            #      ports:
            #        - protocol: TCP
            #          port: 53  # DNS resolution
            #        - protocol: UDP
            #          port: 53  # DNS resolution
