net-wordpress-ing.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: wordpress-ing
spec:
  podSelector:
    matchLabels:
      app: wordpress
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
      - ipBlock:
          cidr: 0.0.0.0/0
      ports:
        - protocol: TCP
          port: 80
  egress:
    - to:
      - podSelector:
          matchLabels:
            app: mysql
      ports:
        - protocol: TCP
          port: 3306
